--- a/server/.env.example
+++ b/server/.env.example
@@ -3,7 +3,7 @@ NODE_ENV=production
 PORT=5000
 
 # MongoDB Atlas Connection (replace with your actual connection string)
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/goaltracker?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://adityajani287:Oneplus7@cluster0.jawicrh.mongodb.net/goaltracker?retryWrites=true&w=majority
 
 # JWT Secret (IMPORTANT: Use a strong, unique secret in production - minimum 32 characters)
 JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters-long-replace-this
