--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
-{
-    "name": "goal-tracker-frontend",
-    "version": "0.1.0",
+{    "name": "goal-tracker-frontend",
+    "version": "0.1.1",
     "private": true,
     "dependencies": {
         "react": "^18.2.0",
